objects/ASI_MFM_BU_Allocation_Detail__c.object
<CustomObject>
    <fields>
        <fullName>ASI_MFM_BU_Allocation__c</fullName>
        <label>BU Allocation</label>
        <referenceTo>ASI_MFM_BU_Allocation__c</referenceTo>
        <relationshipLabel>ASI MFM BU Allocation Details</relationshipLabel>
        <relationshipName>ASI_MFM_BU_Allocation_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_BU_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BU Code</label>
        <referenceTo>ASI_MFM_BU__c</referenceTo>
        <relationshipLabel>ASI MFM BU Allocation Details</relationshipLabel>
        <relationshipName>ASI_MFM_BU_Allocation_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Company_Code__c</fullName>
        <label>Company Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Percentage__c</fullName>
        <label>Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>ASI MFM BU Allocation Detail</label>
    <nameField>
        <displayFormat>BA-{0000000}</displayFormat>
        <label>ASI MFM BU Allocation Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ASI MFM BU Allocation Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>